--- a/gui/static/index.html
+++ b/gui/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pg_agent</title>
+    <title>pgagent</title>
     <style>
         :root {
             --bg-primary: #0f0f1a;
@@ -318,7 +318,7 @@
 
 <body>
     <header>
-        <div class="logo">🧠 pg_agent</div>
+        <div class="logo">🧠 pgagent</div>
         <div class="tabs">
             <button class="tab active" data-panel="chat">Chat</button>
             <button class="tab" data-panel="settings">Settings</button>
@@ -331,7 +331,7 @@
         <div id="chat" class="panel active">
             <div class="chat-messages" id="messages">
                 <div class="message assistant">
-                    안녕하세요! pg_agent입니다. 무엇을 도와드릴까요?
+                    안녕하세요! pgagent입니다. 무엇을 도와드릴까요?
                 </div>
             </div>
             <div class="chat-input-container">
